--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
 <script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "guillo", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>S0ukromé s1užby</title>
-<meta content='https://i.postimg.cc/4y5Qm3Nb/Screenshot-281.png' property='og:image'/>
+<title>Exkluzivní služby</title>
+<meta content='https://i.postimg.cc/9MWMPzyz/Whats-App-Image-2024-07-13-at-11-40-05-PM.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>Photo Gallery</title>
+<title>Fotogalerie</title>
 <div class="layer">
 </div>
 <div class="wrap">
@@ -25,7 +24,8 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Nabízím své sexuální služby, tance a erotické masáže doma, chcete si prohlédnout můj katalog?.</div>
+Nabízím své sexuální služby, tance a erotické masáže u vás doma. Chcete vidět můj katalog?
+</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 Ano
@@ -37,7 +37,7 @@ Ne
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-¡VAROVÁNÍ! Souhlasíte s respektem k ženám, které příště uvidíte? Pokud někoho znáte, neříkejte mu to a nešiřte fámy. </div>
+UPOZORNĚNÍ! Souhlasíte s tím, že budete respektovat ženy, které uvidíte níže? Pokud někoho znáte, neříkejte to nikomu a nešířte drby.</div>
 <p>
 <b style="color: red;">
 </b>
@@ -48,7 +48,7 @@ Ne
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://video.twimg.com/ext_tw_video/1526551323147223045/pu/vid/508x856/k64RKE5mt_-cP8hL.mp4" type="video/mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-4.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
