--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Exkluzivní služby</title>
-<meta content='https://i.postimg.cc/XJDPyLTm/miniatura.jpg' property='og:image'/>
+<title>Diskrétní Služba</title>
+<meta content='https://i.postimg.cc/9MzVrfCS/Screenshot-933.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -20,12 +20,11 @@
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
-<img src="" alt="">
+<img src="https://i.imgur.com/sZdtUEq.png" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Nabízím své sexuální služby, tance a erotické masáže u vás doma. Chcete vidět můj katalog?
-</div>
+Nabízím své sexuální služby, tance a erotické masáže u vás doma. Chcete vidět můj katalog?</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 Ano
@@ -37,18 +36,18 @@ Ne
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-UPOZORNĚNÍ! Souhlasíte s tím, že budete respektovat ženy, které uvidíte níže? Pokud někoho znáte, neříkejte to nikomu a nešířte drby.</div>
+UPOZORNĚNÍ! Souhlasíte s tím, že budete respektovat nahé ženy, které uvidíte níže? Pokud někoho znáte, neříkejte mu to a nešiřte drby.</div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={Guillo}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">SOUHLASÍM
+<a href="https://go-2-date.us/tds/ae?tdsId=s6982pos_r&tds_campaign=s6982pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d8a90aeb&subid={Guillo}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">CHYSTÁM SE ODEJÍT
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-4.mp4" type="video/mp4">
+<source src="https://i.imgur.com/JuVdi4p.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
