--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Diskrétní Služba</title>
-<meta content='https://i.postimg.cc/9MWMPzyz/Whats-App-Image-2024-07-13-at-11-40-05-PM.jpg' property='og:image'/>
+<title>Privátní Služby</title>
+<meta content='https://i.postimg.cc/0NhDRX7M/440940186-1000599934964210-7454669762692041997-n.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -20,34 +20,33 @@
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
-<img src="https://i.imgur.com/sZdtUEq.png" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Nabízím své sexuální služby, tance a erotické masáže u vás doma. Chcete vidět můj katalog?</div>
+Mám sexuální zkušenosti, jsem tanečnice a erotická masérka pro muže. Chceš vidět můj katalog?</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-Ano
+Ne
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-Ne
+Ano
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-UPOZORNĚNÍ! Souhlasíte s tím, že budete respektovat nahé ženy, které uvidíte níže? Pokud někoho znáte, neříkejte mu to a nešiřte drby.</div>
+Gratulujeme! Byl(a) jsi vybrán(a) na setkání s dívkou. Pro dokončení setkání se musíš zaregistrovat na našich stránkách. Klikni na "VSTOUPIT", vyplň bezplatný formulář a užívej si vaginální sex, orgie a mnoho dalšího.... </div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://go-2-date.us/tds/ae?tdsId=s6982pos_r&tds_campaign=s6982pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d8a90aeb&subid={Guillo}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">CHYSTÁM SE ODEJÍT
+<a href="https://go-2-date.us/tds/ae?tdsId=s6982pos_r&tds_campaign=s6982pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d8a90aeb&subid={Guillo}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">VSTOUPIT
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://i.imgur.com/JuVdi4p.mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-4.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
@@ -55,4 +54,4 @@ UPOZORNĚNÍ! Souhlasíte s tím, že budete respektovat nahé ženy, které uvi
                         (window));
       /*]]>*/ 
 </body>
-</html>
+      </html>
